refactor(service): - Use List.of() instead of Arrays.asList() for better performance and immutability when creating a list from an array. -